HEAD
	+ Cron script for manage logs does not run if another is already
	  running, hope that this will avoid problems with large logs
1.3.12
	+ Added type for EBox::Dashboard::Value to stand out warning
	  messages in dashboard
	+ Added EBox::MigrationHelpers to include migration helpers, for now,
	  include a db table renaming one
	+ Bug fix: Fix mismatch in event table field names
	+ Bug fix: Add migration to create language plpgsql in database
	+ Bug fix: Add missing script for report log consolidation
	+ Bug fix: Don't show modules in logs if they are not configured. This
	  prevents some crashes when modules need information only available when
	  configured, such as mail which holds the vdomains in LDAP
	+ Added method EBox::Global::lastModificationTime to know when
	  eBox configuration was modified for last time
	+ Add support for breadcrumbs on the UI
	+ Bug fix: in Loggerd files are only parsed one time regardless of
	  how many LogHelper reference them
	+ Added precondition for Loggerd: it does not run if there isnt
	anything to watch
1.3.11
	+ Support customFilter in models for big tables
	+ Added EBox::Events::sendEvent method to send events using Perl
	  code (used by ebackup module)
	+ Bug fix: EBox::Type::Service::cmp now works when only the
	  protocols are different
	+ Check $self is defined in PgDBEngine::DESTROY
	+ Do not watch files in ebox-loggerd related to disabled modules and
	  other improvements in the daemon
	+ Silent some exceptions that are used for flow control
	+ Improve the message from Service Event Watcher
1.3.10
	+ Show warning when accesing the UI with unsupported browsers
	+ Add disableApparmorProfile to EBox::Module::Service
	+ Bug fix: add missing use
	+ Bug fix: Make EventDaemon more robust against malformed sent
	  events by only accepting EBox::Event objects
1.3.8
	+ Bug fix: fixed order in EBox::Global::modified modules. Now
	  Global and Backup use the same method to order the module list
	  by dependencies
1.3.7